Refactored log searching to support paging Updated swagger spec to include log searching operation
